; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_OS.c_OsTypeToStr.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_OS.c_OsTypeToStr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [34 x i8] c"Unsupported OS by SoftEther VPN\00\0A\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"Windows 95\00\0A\00", align 1
@.str.2 = private unnamed_addr constant [13 x i8] c"Windows 98\00\0A\00", align 1
@.str.3 = private unnamed_addr constant [29 x i8] c"Windows Millennium Edition\00\0A\00", align 1
@.str.4 = private unnamed_addr constant [29 x i8] c"Windows 9x Unknown Version\00\0A\00", align 1
@.str.5 = private unnamed_addr constant [29 x i8] c"Windows NT 4.0 Workstation\00\0A\00", align 1
@.str.6 = private unnamed_addr constant [24 x i8] c"Windows NT 4.0 Server\00\0A\00", align 1
@.str.7 = private unnamed_addr constant [44 x i8] c"Windows NT 4.0 Server, Enterprise Edition\00\0A\00", align 1
@.str.8 = private unnamed_addr constant [24 x i8] c"BackOffice Server 4.5\00\0A\00", align 1
@.str.9 = private unnamed_addr constant [28 x i8] c"Small Business Server 4.5\00\0A\00", align 1
@.str.10 = private unnamed_addr constant [28 x i8] c"Windows 2000 Professional\00\0A\00", align 1
@.str.11 = private unnamed_addr constant [22 x i8] c"Windows 2000 Server\00\0A\00", align 1
@.str.12 = private unnamed_addr constant [31 x i8] c"Windows 2000 Advanced Server\00\0A\00", align 1
@.str.13 = private unnamed_addr constant [33 x i8] c"Windows 2000 Datacenter Server\00\0A\00", align 1
@.str.14 = private unnamed_addr constant [25 x i8] c"BackOffice Server 2000\00\0A\00", align 1
@.str.15 = private unnamed_addr constant [29 x i8] c"Small Business Server 2000\00\0A\00", align 1
@.str.16 = private unnamed_addr constant [26 x i8] c"Windows XP Home Edition\00\0A\00", align 1
@.str.17 = private unnamed_addr constant [26 x i8] c"Windows XP Professional\00\0A\00", align 1
@.str.18 = private unnamed_addr constant [34 x i8] c"Windows Server 2003 Web Edition\00\0A\00", align 1
@.str.19 = private unnamed_addr constant [39 x i8] c"Windows Server 2003 Standard Edition\00\0A\00", align 1
@.str.20 = private unnamed_addr constant [41 x i8] c"Windows Server 2003 Enterprise Edition\00\0A\00", align 1
@.str.21 = private unnamed_addr constant [41 x i8] c"Windows Server 2003 Datacenter Edition\00\0A\00", align 1
@.str.22 = private unnamed_addr constant [25 x i8] c"BackOffice Server 2003\00\0A\00", align 1
@.str.23 = private unnamed_addr constant [29 x i8] c"Small Business Server 2003\00\0A\00", align 1
@.str.24 = private unnamed_addr constant [16 x i8] c"Windows Vista\00\0A\00", align 1
@.str.25 = private unnamed_addr constant [22 x i8] c"Windows Server 2008\00\0A\00", align 1
@.str.26 = private unnamed_addr constant [12 x i8] c"Windows 7\00\0A\00", align 1
@.str.27 = private unnamed_addr constant [25 x i8] c"Windows Server 2008 R2\00\0A\00", align 1
@.str.28 = private unnamed_addr constant [12 x i8] c"Windows 8\00\0A\00", align 1
@.str.29 = private unnamed_addr constant [22 x i8] c"Windows Server 2012\00\0A\00", align 1
@.str.30 = private unnamed_addr constant [14 x i8] c"Windows 8.1\00\0A\00", align 1
@.str.31 = private unnamed_addr constant [25 x i8] c"Windows Server 2012 R2\00\0A\00", align 1
@.str.32 = private unnamed_addr constant [13 x i8] c"Windows 10\00\0A\00", align 1
@.str.33 = private unnamed_addr constant [22 x i8] c"Windows Server 2016\00\0A\00", align 1
@.str.34 = private unnamed_addr constant [24 x i8] c"Newer than Windows 10\00\0A\00", align 1
@.str.35 = private unnamed_addr constant [33 x i8] c"Newer than Windows Server 2016\00\0A\00", align 1
@.str.36 = private unnamed_addr constant [14 x i8] c"UNIX System\00\0A\00", align 1
@.str.37 = private unnamed_addr constant [8 x i8] c"Linux\00\0A\00", align 1
@.str.38 = private unnamed_addr constant [14 x i8] c"Sun Solaris\00\0A\00", align 1
@.str.39 = private unnamed_addr constant [13 x i8] c"Gnu Cygwin\00\0A\00", align 1
@.str.40 = private unnamed_addr constant [13 x i8] c"BSD System\00\0A\00", align 1
@.str.41 = private unnamed_addr constant [11 x i8] c"Mac OS X\00\0A\00", align 1
@.str.42 = private unnamed_addr constant [11 x i8] c"Unknown OS\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @OsTypeToStr(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %47 [
    i32 0, label %5
    i32 145, label %6
    i32 144, label %7
    i32 141, label %8
    i32 130, label %9
    i32 136, label %10
    i32 139, label %11
    i32 138, label %12
    i32 140, label %13
    i32 137, label %14
    i32 157, label %15
    i32 155, label %16
    i32 160, label %17
    i32 158, label %18
    i32 159, label %19
    i32 156, label %20
    i32 129, label %21
    i32 128, label %22
    i32 149, label %23
    i32 150, label %24
    i32 152, label %25
    i32 153, label %26
    i32 154, label %27
    i32 151, label %28
    i32 143, label %29
    i32 142, label %30
    i32 148, label %31
    i32 133, label %32
    i32 147, label %33
    i32 132, label %34
    i32 146, label %35
    i32 131, label %36
    i32 162, label %37
    i32 135, label %38
    i32 161, label %39
    i32 134, label %40
    i32 163, label %41
    i32 166, label %42
    i32 164, label %43
    i32 167, label %44
    i32 168, label %45
    i32 165, label %46
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %48

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %48

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %48

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %48

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %48

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %48

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %48

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %48

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.8, i64 0, i64 0), i8** %2, align 8
  br label %48

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.9, i64 0, i64 0), i8** %2, align 8
  br label %48

15:                                               ; preds = %1
  store i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.10, i64 0, i64 0), i8** %2, align 8
  br label %48

16:                                               ; preds = %1
  store i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.11, i64 0, i64 0), i8** %2, align 8
  br label %48

17:                                               ; preds = %1
  store i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.12, i64 0, i64 0), i8** %2, align 8
  br label %48

18:                                               ; preds = %1
  store i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.13, i64 0, i64 0), i8** %2, align 8
  br label %48

19:                                               ; preds = %1
  store i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.14, i64 0, i64 0), i8** %2, align 8
  br label %48

20:                                               ; preds = %1
  store i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.15, i64 0, i64 0), i8** %2, align 8
  br label %48

21:                                               ; preds = %1
  store i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.16, i64 0, i64 0), i8** %2, align 8
  br label %48

22:                                               ; preds = %1
  store i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.17, i64 0, i64 0), i8** %2, align 8
  br label %48

23:                                               ; preds = %1
  store i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.18, i64 0, i64 0), i8** %2, align 8
  br label %48

24:                                               ; preds = %1
  store i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.19, i64 0, i64 0), i8** %2, align 8
  br label %48

25:                                               ; preds = %1
  store i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.20, i64 0, i64 0), i8** %2, align 8
  br label %48

26:                                               ; preds = %1
  store i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.21, i64 0, i64 0), i8** %2, align 8
  br label %48

27:                                               ; preds = %1
  store i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.22, i64 0, i64 0), i8** %2, align 8
  br label %48

28:                                               ; preds = %1
  store i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.23, i64 0, i64 0), i8** %2, align 8
  br label %48

29:                                               ; preds = %1
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.24, i64 0, i64 0), i8** %2, align 8
  br label %48

30:                                               ; preds = %1
  store i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.25, i64 0, i64 0), i8** %2, align 8
  br label %48

31:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.26, i64 0, i64 0), i8** %2, align 8
  br label %48

32:                                               ; preds = %1
  store i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.27, i64 0, i64 0), i8** %2, align 8
  br label %48

33:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.28, i64 0, i64 0), i8** %2, align 8
  br label %48

34:                                               ; preds = %1
  store i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.29, i64 0, i64 0), i8** %2, align 8
  br label %48

35:                                               ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.30, i64 0, i64 0), i8** %2, align 8
  br label %48

36:                                               ; preds = %1
  store i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.31, i64 0, i64 0), i8** %2, align 8
  br label %48

37:                                               ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.32, i64 0, i64 0), i8** %2, align 8
  br label %48

38:                                               ; preds = %1
  store i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.33, i64 0, i64 0), i8** %2, align 8
  br label %48

39:                                               ; preds = %1
  store i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.34, i64 0, i64 0), i8** %2, align 8
  br label %48

40:                                               ; preds = %1
  store i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.35, i64 0, i64 0), i8** %2, align 8
  br label %48

41:                                               ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.36, i64 0, i64 0), i8** %2, align 8
  br label %48

42:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.37, i64 0, i64 0), i8** %2, align 8
  br label %48

43:                                               ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.38, i64 0, i64 0), i8** %2, align 8
  br label %48

44:                                               ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.39, i64 0, i64 0), i8** %2, align 8
  br label %48

45:                                               ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.40, i64 0, i64 0), i8** %2, align 8
  br label %48

46:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.41, i64 0, i64 0), i8** %2, align 8
  br label %48

47:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.42, i64 0, i64 0), i8** %2, align 8
  br label %48

48:                                               ; preds = %47, %46, %45, %44, %43, %42, %41, %40, %39, %38, %37, %36, %35, %34, %33, %32, %31, %30, %29, %28, %27, %26, %25, %24, %23, %22, %21, %20, %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %49 = load i8*, i8** %2, align 8
  ret i8* %49
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
